--- a/MyEclipseCode/JavaWebDemo2/WebRoot/WEB-INF/web.xml
+++ b/MyEclipseCode/JavaWebDemo2/WebRoot/WEB-INF/web.xml
@@ -4,6 +4,62 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>JavaWebDemo2</display-name>
+	
+	<!-- log4j相关配置====开始 -->
+	
+	<!-- Spring 容器加载 -->  
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<!-- 设置根目录 -->  
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>webapp.root</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.properties</param-value>
+	</context-param>
+	
+	<!-- 3000表示 开一条watchdog线程每60秒扫描一下配置文件的变化;这样便于日志存放位置的改变 -->  
+	<context-param>
+		<param-name>log4jRefreshInterval</param-name>
+		<param-value>3000</param-value>
+	</context-param>
+	
+	<!-- 5.0版本已经废弃Log4jConfigListener，5.0之后需要使用log4j2（此处仅仅是练习，配置不能使用） -->
+	<!-- <listener>  
+    	<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
+	</listener> -->
+	
+	
+	<servlet>
+		<servlet-name>Log4JTestServlet</servlet-name>
+		<servlet-class>cn.demo.log4j.Log4JTestServlet</servlet-class>
+	</servlet>
+
+	<!-- ***********不使用spring时的配置start************ -->
+	<!--用来启动 log4jConfigLocation的servlet -->
+	<!-- <servlet>
+		<servlet-name>Log4JInitServlet</servlet-name>
+		<servlet-class>cn.demo.log4j.Log4JInitServlet</servlet-class>
+		<init-param>
+			<param-name>log4j-properties-location</param-name>
+			<param-value>WEB-INF\classes\log4j.properties</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet> -->
+	<!-- ************不使用spring时的配置end*********** -->
+	
+
+	
+	<!-- log4j相关配置====结束 -->
+	
+	
+	
+	
 	<servlet>
 		<servlet-name>RegisterUIServlet</servlet-name>
 		<servlet-class>cn.demo.web.ui.RegisterUIServlet</servlet-class>
@@ -22,21 +78,6 @@
 	</servlet-mapping>
 
 
-	<servlet>
-		<servlet-name>Log4JTestServlet</servlet-name>
-		<servlet-class>cn.demo.log4j.Log4JTestServlet</servlet-class>
-	</servlet>
-
-	<!--用来启动 log4jConfigLocation的servlet -->
-	<servlet>
-		<servlet-name>Log4JInitServlet</servlet-name>
-		<servlet-class>cn.demo.log4j.Log4JInitServlet</servlet-class>
-		<init-param>
-			<param-name>log4j-properties-location</param-name>
-			<param-value>WEB-INF\classes\log4j.properties</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
 
 
 
